# ChangeLog for virtual/ruby-threads
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-threads/ChangeLog,v 1.19 2012/10/28 19:30:44 armin76 Exp $

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-0.ebuild,
  ruby-threads-1.ebuild:
  alpha stable

  28 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
  Add ~alpha

  27 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
  s390/sh stable wrt #411507

  21 Oct 2012; Raúl Porcel <armin76@gentoo.org> ruby-threads-1.ebuild:
  sparc stable wrt #411507

  29 Sep 2012; Fabian Groffen <grobian@gentoo.org> ruby-threads-1.ebuild:
  Marked ~x64-macos

  25 Jul 2012; Anthony G. Basile <blueness@gentoo.org> ruby-threads-1.ebuild:
  Stable ppc64, bug #411507

  22 Jul 2012; <nixnut@gentoo.org> ruby-threads-1.ebuild:
  ppc stable #411507

  08 Jul 2012; Jeroen Roovers <jer@gentoo.org> ruby-threads-1.ebuild:
  Marked ~hppa (bug #417573).

  25 Jun 2012; Andreas Schuerch <nativemad@gentoo.org> ruby-threads-1.ebuild:
  x86 stable, see bug 411507

  27 May 2012; Markus Meier <maekke@gentoo.org> ruby-threads-1.ebuild:
  arm stable, bug #411507

  26 May 2012; Markus Meier <maekke@gentoo.org> ruby-threads-1.ebuild:
  add ~arm

  20 May 2012; Agostino Sarubbo <ago@gentoo.org> ruby-threads-1.ebuild:
  Stable for amd64, wrt bug #411507

  06 May 2012; Kacper Kowalik <xarthisius@gentoo.org> ruby-threads-0.ebuild:
  ppc64 stable wrt #369573

  28 Dec 2011; Hans de Graaff <graaff@gentoo.org> ruby-threads-1.ebuild:
  Add keywords similar to the underlying implementation, most notable ruby 1.9.

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> ruby-threads-0.ebuild:
  sparc stable

  23 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> ruby-threads-0.ebuild:
  ppc stable wrt #348510

  20 Jul 2011; Thomas Kahle <tomka@gentoo.org> ruby-threads-0.ebuild,
  ruby-threads-1.ebuild, ruby-threads-2.ebuild, ruby-threads-3.ebuild: