@@ -1,5 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 EBUILD ruby-threads-0.ebuild 1352 SHA256 da6c60acd2094f4f58d8379ee0d24c476e6b6cfb703a38c37df4d351b2336b14 SHA512 ccc4cf1228b485b2f5cc89fa8976a98f1779e48c626bf454a39fac9c236b938a76d819f0c984292eb617757f8dc48a0809703703ceb5d4dbd4bdf61ccd7815ab WHIRLPOOL ca69f75d1cfc0bddce711f88a10a92392b3d8f7660a300087da6dfb00a4cc96e6ff2b8069715251ee730a12b2182a6f515f7731a31e0b6cca1566b27c7cc687d
 EBUILD ruby-threads-1.ebuild 1340 SHA256 693cd57ff6aabe7d659b07a7d55069086b23520ce81c73c03787caf67aa13763 SHA512 2f4247ad35f366ae531352d7dbcd46f489c3de057b17d690bbd6643bc408cad4957901081e6c5b0c0b15399e43b427ef54138b10ab2eb6adf0ae2ff61a55567f WHIRLPOOL e70d83a29cb04d4efd1f429cb8538414c4a6e2870d18ed94d8c1085e6d5db8b204e0bbdf11220c345fd456f321378a99fb73aff476c87ec344772cfa193b3ae6
 EBUILD ruby-threads-2.ebuild 1260 SHA256 f37ae6c1c75b47989094e4785906df2f0e6c6ea5de14b4a419087ba6c9f91f8b SHA512 584976cabd1e16405aba79637ebc93c3f4edf9f01dba969308e093fc00c1e4148a3e205b04e3a46fc41a84c2bf715011562dc065b1e2f5cd785d475951faff1a WHIRLPOOL 839d94a2dd6b11740916449a9da1fbdce3f155c6f450951bb9ad7df7467fb021c76fbcb993dbf748ecae57a364226f9fbe020393baabdd7d27160e8fc1e1abdb
-MISC ChangeLog 2604 SHA256 1579870510c82f1232dda557b5b5af1d389464e3846ba7731db3e06fa6cb8995 SHA512 982c935934c14f222ab0965e46a3fb37a04b33a52be84d6147ad6a79673b0cb97cc3c2b19d31e5b567d2c5c975e7914fccb2ce57ce0f46b4c95617045a89a201 WHIRLPOOL 1a1401f782805dfbf71f17a1b6c504b3c516bcf47ad134c3a990d1a2b65540b43cb917d57954021869fa6bdd479350156a505fb297d1915a138c7de83043166a
+EBUILD ruby-threads-4.ebuild 1347 SHA256 5b39443ad348873400f560e4dafdf09b0188fa77017981ade3736ff6cd743ebf SHA512 9ec784fd11d78a8c405fbf8eed46d11551242b307dc696cd728470fecd51f09b7c42618cab442f2c5ac26094d5ecd474e5dfbdd552eb9fae5f4584dba9d6315b WHIRLPOOL 17deae79c372e0793015d7f34612fe132c6a84bdd792c48f00b605b0b95e92278e21e1003815c33634d7cc0f1a1935e1878b26d41d74a63b23c5ebdb99884402
+MISC ChangeLog 2735 SHA256 334161815ade658473203561077f768807922ba7407b5a58d485dea6ba183276 SHA512 36a6e46f0c83cd5ddf397a80c0916cbf3d5104396ebf971bf944f72260a52b8c6c627b6aa05e6d2e851350d5de5a40403e9cc79b608a2414aeca6d7692e31686 WHIRLPOOL 2fb8ad3cb5d87c12607ba6db863e48b3ec7902530e8690c90678f9c36a50c22b64b643ff288ca5922dceb3e35ecb37a44e1f7938456f7056d407497dc717931f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlHcTDkACgkQiIP6VqMIqNeqhgD9GsUiJYcw7pofDnmwT8X+F9La
+7NtixqA5o7V9MH9rvqAA/jxab5Ibv6rOaAPFB3vS87GabpqlYrvQ1guGLOCoIj24
+=T7FA
+-----END PGP SIGNATURE-----
